--- a/mvisuals/templates/home.html
+++ b/mvisuals/templates/home.html
@@ -160,7 +160,7 @@ background-size: 100%">
         </div>
         <div class="col-10 m-3">
             {% for p in products %}
-            <div class="card d-inline-block m-4" style=" ;position: relative; top:-50px; background-color: #e2e3e5;  width: 245px; border:1px solid black; border-radius: 5px;">
+            <div class="card d-inline-block m-4" style="position: relative; top:-50px; background-color: #e2e3e5;  width: 245px; border:1px solid black; border-radius: 5px;">
             <img style="margin-left: 25px; width: 200px; height: 150px;" class="align-center" src="{{ MEDIA_URL }} {{ p.image.url }}" alt="Card image cap">
                  <div class="card-body" style="background-color: transparent;">
                     <h2 class="display-6 fs-2  text-dark fst-normal text-center">{{ p.product_name }}</h2>
