--- a/mvisuals/templates/registration.html
+++ b/mvisuals/templates/registration.html
@@ -76,7 +76,7 @@ background-size: 100%">
 <div class="container-fluid" style="background-color: black; opacity: 95%;height: 150px;">
 
 <nav class="navbar navbar-expand-lg">
-    <a style="text-decoration: none;" href="/home"><h1 style="letter-spacing: 12px;" class="display-1 text-light">MVISUALS</h1></a>
+    <a style="text-decoration: none;" href="/home"><h1 id="title" style="letter-spacing: 12px;" class="display-1 text-light">MVISUALS</h1></a>
 
   <div class="container-fluid">
     <div class="collapse navbar-collapse justify-content-end text-light fs-3 fst-italic" id="navbarNav">
